--- a/.github/ISSUE_TEMPLATE/프리온보딩-챌린지-사전과제-템플릿.md
+++ b/.github/ISSUE_TEMPLATE/프리온보딩-챌린지-사전과제-템플릿.md
@@ -1,12 +1,16 @@
 ## 과제
 ### 1. 현재 사용하고 있는, 적용해 본 SW아키텍처가 무엇인가요? 해당 SW아키텍처에 대해 설명 가능하신가요?
 
+가장 널리 사용되는 유형은 모놀리식 및 N-티어 아키텍처(긴밀한 결합), 마이크로서비스(분리됨), 이벤트 기반 아키텍처 및 서비스 지향 아키텍처(탄력적 결합)
 
+하나의 소프트웨어에 대해 어떤 프레임워크,  Database,  시스템간 연동, SSO로그인, 파일업로드, 파일 전송, 서버인프라, 등의 전체 설계를 총관리
 ### 2. SW아키텍처에 대한 관심도는 어느 정도이실까요?
 
+프로젝트 경험 1번.
 
 ### 3. SW아키텍처가 필요한 이유가 무엇일까요?
 
+이후 개선 및 유지보수에 좋음.
 
 ### 4. SW아키텍처 간 테스트는 어떻게 하고 있으신가요?
 
